--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "url": "git+https://github.com/knightjdr/prohits-viz-news.git"
   },
   "dependencies": {
-    "html-minifier": "^3.5.20"
+    "html-minifier": "^3.5.20",
+    "mongodb": "^3.3.0-beta2"
   }
 }
